--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!--
+ * @Author: chenyx
+ * @Date: 2023-03-01 13:44:35
+ * @LastEditors: Do not edit
+ * @LastEditTime: 2023-03-01 20:42:58
+ * @FilePath: /backstage-manage/index.html
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="vue-element-admin的vue3升级版本" />
     <meta name="keywords" content="vue-element-admin,vue3-element-admin" />
-    <title>vue3-element-admin</title>
+    <title>后台管理</title>
   </head>
   <body>
     <div id="app"></div>
